feat: adjust play endpoint
